# posixutils-rs

./: .gitignore  Cargo.toml
.github/workflows/: MacosCI.yml  TestingCI.yml
cron/: Cargo.toml  crond.rs  crontab.rs  job.rs  lib.rs
cron/src/: crond.rs  crontab.rs  job.rs  lib.rs  main.rs
cron/tests/: crond.rs  crond_test.rs  crontab.rs  crontab_test.rs  integration.rs
cron/tests/crond/: mod.rs
cron/tests/crontab/: kill.rs  mod.rs
datetime/: Cargo.toml
datetime/src/: time.rs
datetime/tests/time/: mod.rs
display/: Cargo.toml  echo.rs  error.txt  errors.txt  man.rs  man.test.conf  more.rs  more1.rs  printf.rs  tags  test.mdoc  test2.mdoc  test3.mdoc
display/man_util/: config.rs  formatter.rs  mdoc.pest  mod.rs  parser.rs
display/man_util/mdoc_macro/: mod.rs  text_production.rs  types.rs
display/test_files/: README.md  TODO.md  styled.txt  styled1.txt  styled2.txt  styled3.txt  styled4.txt
display/test_files/mdoc/: access.2  ioctl.2  snmp.1  t11.2  test.1  tmux.1
display/tests/: display-tests.rs
display/tests/echo/: mod.rs
display/tests/man/: mod.rs
display/tests/more/: mod.rs
display/tests/printf/: mod.rs
file/: Cargo.toml  join.rs  patch.rs
file/src/: find.rs
file/tests/: file-tests.rs  integration.rs
file/tests/find/: mod.rs
file/tests/join/: mod.rs
file/tests/patch/: mod.rs
file/tests/patch/scripts/: f.diff  patch.diff
make/: Cargo.toml
make/src/: config.rs  error_code.rs  lib.rs  main.rs  rule.rs  special_target.rs
make/src/parser/: lex.rs  mod.rs  parse.rs  preprocessor.rs
make/src/rule/: config.rs  recipe.rs
make/src/rule/recipe/: config.rs
make/tests/: integration.rs  parser.rs
make/tests/makefiles/: no_targets.mk
make/tests/makefiles/arguments/dash_t/: makefile
make/tests/makefiles/variables/: substitutes.mk
man/: Cargo.toml
pathnames/: Cargo.toml  realpath.rs  realpath_new.rs
pathnames/tests/: pathnames-tests.rs
pathnames/tests/realpath_complete/: mod.rs
pathnames/tests/realpath_new/: mod.rs
process/: Cargo.toml  at.rs  batch.rs  fuser.rs  timeout.rs
process/tests/: at.rs
process/tests/fuser/: basic.rs  mod.rs  tcp.rs  udp.rs  unix.rs  with_user.rs
process/tests/timeout/: mod.rs
screen/: Cargo.toml  more.rs
text/: Cargo.toml  grep.rs  sed.rs
text/src/: csplit.rs  cut.rs  grep.rs  nohup.rs  od.rs  sort.rs  tail.rs  tr.rs  unexpand.rs  uniq.rs
text/tests/: csplit.rs  integration.rs
text/tests/assets/: od_test.txt  pattern_file_1  pattern_file_2  test_file.txt  text.txt  uniq_test_file.txt
text/tests/grep/: mod.rs
text/tests/sed/: mod.rs
text/tests/sed/assets/: script_blanks  script_some_newlines
users/: <stdin>  Cargo.toml  invite_ids.txt  newgrp.rs  talk.rs
users/tests/: process-tests.rs  users-tests.rs
users/tests/newgrp/: mod.rs
users/tests/talk/: mod.rs
