[package]
name = "posixutils-display"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
regex = "1.11.0"
magic = "0.16.2"
ncursesw = "0.17"
termios = "0.3.3"

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "more"
path = "./more.rs"

[[bin]]
name = "more1"
path = "./more1.rs"