[package]
name = "posixutils-display"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc = { version = "0.2.159", default-features = false }
regex = "1.11.0"
magic = "0.16.2"
ncurses = "6.0.1"
thiserror = "1.0.64"

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "more"
path = "./more.rs"

[[bin]]
name = "more1"
path = "./more1.rs"