[package]
name = "posixutils-display"
version = "0.2.1"
authors = ["Jeff Garzik"]
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
gettext-rs.workspace = true
libc = { version = "0.2.159", default-features = false }
termion = "4.0.3"
simple-signal = "1.1.1"
thiserror = "1.0.64"

[dev-dependencies]
plib = { path = "../plib" }

[lints]
workspace = true

[[bin]]
name = "echo"
path = "./echo.rs"

[[bin]]
name = "printf"
path = "./printf.rs"

[[bin]]
name = "more"
path = "./more.rs"
