[package]
name = "posixutils-users"
version = "0.2.0"
edition = "2021"
authors = ["Jeff Garzik"]
license = "MIT"
repository = "https://github.com/rustcoreutils/posixutils-rs.git"

[dependencies]
plib = { path = "../plib" }
clap.workspace = true
gettext-rs.workspace = true
libc.workspace = true
atty.workspace = true
chrono.workspace = true
syslog = "6.1"
termion = "4.0"
byteorder = "1.5.0"
tokio = { version = "1.40.0", features = ["full"] }

[[bin]]
name = "id"
path = "./id.rs"

[[bin]]
name = "logname"
path = "./logname.rs"

[[bin]]
name = "logger"
path = "./logger.rs"

[[bin]]
name = "mesg"
path = "./mesg.rs"

[[bin]]
name = "pwd"
path = "./pwd.rs"

[[bin]]
name = "tty"
path = "./tty.rs"

[[bin]]
name = "write"
path = "./write.rs"

[[bin]]
name = "talk"
path = "./talk.rs"
